# janus

./: README.md  build.sh  run.sh
api/: .gitignore  README.md  api.cabal  conf.yaml  db.sql  hie.yaml  login.json  stack.yaml
api/app/: Main.hs
api/src/: Janus.hs
api/src/Janus/: Core.hs  Settings.hs  Static.hs  User.hs
api/src/Janus/Data/: Config.hs  Message.hs  Model.hs  Role.hs  UUID.hs  User.hs
api/src/Janus/Utils/: Auth.hs  DB.hs  JWT.hs  Password.hs
api/test/: Login.hs  Spec.hs  Static.hs
api/www/: index.html  index.js
api/www/css/: base.css
ui/: .gitignore  index.html  index.js  package-lock.json  package.json  packages.dhall  spago.dhall
ui/css/: base.css
ui/src/: AppM.purs  Main.purs  Store.purs
ui/src/Api/: Endpoint.purs  Request.purs  Utils.purs
ui/src/Capability/: I18n.purs  LogMessages.purs  Navigate.purs  Now.purs
ui/src/Capability/Resource/: User.purs
ui/src/Component/: Router.purs  Table.purs  Utils.purs
ui/src/Component/HTML/: Fragments.purs  Menu.purs  Utils.purs
ui/src/Data/: Email.purs  Error.purs  Log.purs  Profile.purs  Role.purs  Route.purs  UUID.purs  Username.purs
ui/src/Form/: Field.purs  Login.purs  User.purs  UserCreate.purs  UserCreate.save  Validation.purs
ui/src/Form/User/: Create.purs  Delete.purs  Edit.purs  UserCreate.save
ui/src/Lang/: I18n.purs  Login.purs  Message.purs  Router.purs  Users.purs  Validation.purs
ui/src/Lang/Component/: Table.purs
ui/src/Lang/Form/: Login.purs  User.purs
ui/src/Page/: Dashboard.purs  Home.purs  Login.purs  Users.purs
