name:                api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/api#readme
license:             GNU
license-file:        LICENSE
author:              Tomas Stenlund
maintainer:          tomas.stenlund@telia.com
copyright:           2023 Tomas Stenlund
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Janus
                     , Janus.Static
                     , Janus.User
                     , Janus.Utils.JWT
                     , Janus.Data.User
                     , Janus.Data.Config
                     , Janus.Core
                     , Janus.Utils.DB
                     , Janus.Data.Model
                     , Janus.Settings
                     , Janus.Utils.Password
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , wai-extra
                     , containers
                     , text
                     , time
                     , mtl
                     , jwt
                     , yaml
                     , transformers
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , monad-logger
                     , resourcet
                     , unliftio-core
                     , cryptonite
                     , http-types
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , scotty
                     , wai
                     , wai-extra
                     , api
                     , text
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , monad-logger
                     , resourcet

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Static
  build-depends:       base
                     , api
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
                     , persistent-sqlite
                     , monad-logger
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/api
